--- a/happytime/src/App.css
+++ b/happytime/src/App.css
@@ -6,8 +6,9 @@
 
 .main-content {
   background-color: rgba(248, 247, 247, 0.735);
-  margin: 65px 85px 0px 65px;
+  /* margin: 65px 85px 0px 65px; */
   padding-bottom: 40px;
+  width: 95%;
 }
 
 @media all and (max-width: 780px) {
