--- a/happytime/src/Client/Components/layouts/Navbar/style.css
+++ b/happytime/src/Client/Components/layouts/Navbar/style.css
@@ -19,6 +19,7 @@
   color: orange;
   background-color: transparent;
   border-radius: 0.5rem;
+  margin-left: 14px;
 }
 
 /* Left Items */
@@ -104,7 +105,7 @@
 
 #dropdown-basic {
   text-align: left;
-  padding: 0.4rem 1.8rem;
+  padding: 0.1rem 2rem;
   color: black;
   --tw-bg-opacity: 1;
   background-color: rgb(240 240 240 / var(--tw-bg-opacity));
@@ -120,7 +121,7 @@
 .noti-icon:hover,
 #dropdown-basic:hover {
   cursor: pointer;
-  background-color: rgba(255, 235, 205, 0.579);
+  background-color: rgba(255, 235, 205, 0.579) !important;
 }
 
 .dropdown-text {
