--- a/happytime/src/App.css
+++ b/happytime/src/App.css
@@ -6,8 +6,10 @@
 
 .main-content {
   background-color: rgba(248, 247, 247, 0.735);
-  margin: 65px 85px 0px 65px;
+  /* margin: 65px 85px 0px 65px; */
   padding-bottom: 40px;
+  width: 95%;
+  overflow-x: scroll;
 }
 
 @media all and (max-width: 780px) {
@@ -19,7 +21,6 @@
 label{
   font-weight: bold;
   margin-top: 10px;
-  /* text-align: center; */
   display: flex;
   justify-content: center;
 }
