--- a/happytime/src/Client/Components/layouts/Navbar/style.css
+++ b/happytime/src/Client/Components/layouts/Navbar/style.css
@@ -19,6 +19,7 @@
   color: orange;
   background-color: transparent;
   border-radius: 0.5rem;
+  margin-left: 14px;
 }
 
 /* Left Items */
@@ -72,7 +73,7 @@
   border-color: rgb(254 215 170 / var(--tw-border-opacity));
 }
 
-.btn-3 {
+.btn-1 {
   padding: 0px;
   border: 0px;
   border-color: transparent;
@@ -104,15 +105,14 @@
 
 #dropdown-basic {
   text-align: left;
-  padding: 0.4rem 1.8rem;
+  padding: 0.1rem 2rem;
   color: black;
   --tw-bg-opacity: 1;
   background-color: rgb(240 240 240 / var(--tw-bg-opacity));
 }
 
-.btn-4 {
-  margin-left: -1rem;
-  padding-right: 1.5rem;
+.btn-2 {
+  margin-left: -1.5rem;
 }
 
 .btn:hover,
@@ -120,12 +120,10 @@
 .noti-icon:hover,
 #dropdown-basic:hover {
   cursor: pointer;
-  background-color: rgba(255, 235, 205, 0.579);
+  background-color: rgba(255, 235, 205, 0.579) !important;
 }
 
 .dropdown-text {
   margin-top: 10px;
   padding-top: 2px;
 }
-
-
