--- a/happytime/src/Client/Components/layouts/SideMenu/style.css
+++ b/happytime/src/Client/Components/layouts/SideMenu/style.css
@@ -1,8 +1,8 @@
 .sidebar {
   height: 100%;
   background-color: white;
-  position: fixed;
-  z-index: 1;
+  /* position: fixed; */
+  /* z-index: 1; */
   overflow-x: hidden;
   margin-top: 65px;
   filter: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1))
