--- a/happytime/src/Client/pages/UserLIst/userList.css
+++ b/happytime/src/Client/pages/UserLIst/userList.css
@@ -1,4 +1,4 @@
-.he_table{
+/* .he_table{
     display: flex;
     justify-content: space-between;
     background-color: white;
@@ -10,4 +10,4 @@
     width: 50%;
     padding: 10px 0 10px 134px;
     margin: auto;
-}
+} */
