update api controller, edit user

--- a/happytime/src/Admin/pages/task/task_style.css
+++ b/happytime/src/Admin/pages/task/task_style.css
@@ -15,3 +15,30 @@ h2 {
     background-color: rgb(253, 175, 30) !important;
     border-color: rgb(253, 175, 30) !important;
 }
+
+.success-message {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #4caf50;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    z-index: 9999;
+    animation: fadeOut 3s ease-in-out;
+  }
+  
+  @keyframes fadeOut {
+    0% {
+      opacity: 1;
+    }
+    90% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  
