--- a/happytime/src/Client/Components/layouts/Navbar/style.css
+++ b/happytime/src/Client/Components/layouts/Navbar/style.css
@@ -1,6 +1,6 @@
 .navbar {
   position: fixed;
-  width: 100%;
+  min-width: 100%;
   display: flex;
   z-index: 2;
   justify-content: space-between;
