--- a/happytime/src/Client/Components/layouts/SideMenu/style.css
+++ b/happytime/src/Client/Components/layouts/SideMenu/style.css
@@ -1,10 +1,8 @@
 .sidebar {
   height: 100%;
   background-color: white;
-  /* position: fixed; */
-  /* z-index: 1; */
   overflow-x: hidden;
-  margin-top: 65px;
+  margin-top: 70px;
   filter: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1))
     drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
 }
@@ -16,15 +14,21 @@
 
 .icon-link {
   display: flex;
-  gap: 1rem;
+  gap: 6px;
   color: rgb(102, 102, 102);
-  background-color: white;
   text-decoration: none;
 }
 
 .icon-link:hover {
   color: orange;
   background-color: rgba(251, 226, 180, 0.782);
+  cursor: pointer;
+}
+
+.hover:hover {
+  text-decoration: underline;
+  color: orange;
+
 }
 
 .item-name {
