--- a/happytime/src/Admin/pages/task/task_style.css
+++ b/happytime/src/Admin/pages/task/task_style.css
@@ -41,4 +41,35 @@ h2 {
       opacity: 0;
     }
   }
+
+  .float-message.error-message {
+    position: fixed;
+
+
+    color: #ffffff;
+    padding: 10px 20px;
+    border-radius: 5px;
+
+    transition: opacity 0.3s ease-in-out;
+    top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+  background-color: #f44336;
+
+  font-weight: bold;
+  text-align: center;
+  z-index: 9999;
+  }
+  
+  .float-message.error-message.show {
+    opacity: 1;
+  }
+  
+  .float-message.error-message.hide {
+    opacity: 0;
+    pointer-events: none;
+  }
+  
+  
   
